--- a/video 4/bookmarkmanager.html
+++ b/video 4/bookmarkmanager.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Bookmarks</title>
+  <title>Anchor Tags</title>
 </head>
 <body>
   <h1>My Bookmarks</h1>
