Title updates and unwanted folder deletion 1

--- a/video 7/index.html
+++ b/video 7/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <form action="post">
-    <h1>Form to sign up for Web Development Bootcamp</h1>
+    <h1>Forms</h1>
     <div>
       <label for="username">Username</label>
       <input type="text" name="username" id="username" placeholder="Enter your username" pattern="[a-zA-Z0-9]+" required autofocus>
